BUGFIX: Correctly align hidden nodes in node tree (#2062)

--- a/packages/react-ui-components/src/Tree/node.css
+++ b/packages/react-ui-components/src/Tree/node.css
@@ -38,8 +38,11 @@
     margin-top: 6px;
 }
 
-.header__icon {
-    margin: 0 .4em;
+.header__iconWrapper {
+    width: 2em;
+    display: inline-block;
+    position: absolute;
+    text-align: center;
 }
 
 .header__data {
@@ -95,6 +98,7 @@
 }
 .header__label {
     composes: reset from './../reset.css';
+    margin-left: 2em;
 
     .header__data--isActive & {
         color: var(--colors-PrimaryBlue);
